adding content for each page

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="externalNav">
         <nav>
             <ul>
-                <li><a href="https://wa.gov/">Official</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Washington_(state)">Wikipedia</a></li>
-                <li><a href="https://stateofwatourism.com/">Tourism</a></li>
+                <li><a href="https://wa.gov/" target="_blank">Official</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Washington_(state)" target="_blank">Wikipedia</a></li>
+                <li><a href="https://stateofwatourism.com/" target="_blank">Tourism</a></li>
             </ul>
         </nav>
     </div>
@@ -50,33 +50,39 @@
 <main>
     <div class="content">
         <section>
-            <!--ordered list-->
-            <!--form-->
-            <!--need absolute and relative positioning-->
-            <!--javascript validation-->
-            <h2></h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto autem dicta, eligendi et eum
-                excepturi expedita facilis hic obcaecati quae quaerat quod recusandae repellendus repudiandae sint sunt
-                veritatis voluptate?</p>
+            <h2>About</h2>
+            <p>
+                Washington state is located in the northwest corner of the contiguous states. Washington has several
+                types of terrain including beaches, forests, mountains, hills and an arid desert like region. The state
+                has three neighbors: Canada to the north, Oregon to the south and Idaho to the east.
+            </p>
         </section>
         <section>
             <article>
-                <h2>Article 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
+                <h2>Outdoor life</h2>
+                <p>
+                    With such a diverse landscape Washington has it all. From Boating on the pacific ocean to skiing
+                    in the Cascade mountains you will be sure to find your favorite outdoor spot. Some favorite outdoor
+                    activities include hiking the Hoh rainforest of the Olympic peninsula, walking the pacific beaches,
+                    kayaking in the Salish sea, or hooping it up in Spokane’s Hoopfest, the largest 3-on-3 basketball
+                    tournament in the world.
+                </p>
+                    The scenery is amazing as well. Dominating the city skyline is the giant Mount Rainier which stands
+                    at over 14,000 feet tall. If you are a skilled mountain climber it will surely offer a challenge.
+                <p>
+
+                </p>
             </article>
             <article>
-                <h2>Article 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
+                <h2>Economy</h2>
+                <p>
+                    Washington boasts many Fortune 500 companies, many of them being famous for their technology.
+                    Microsoft, Amazon, and Nintendo all call the state home.
+                </p>
+                <p>
+                    It isn’t all about tech though. Washington is home to other large companies such as Starbucks
+                    and is also a major producer of agriculture products.
+                </p>
             </article>
         </section>
     </div>
@@ -90,7 +96,6 @@
             <tr>
                 <th>Largest city</th>
                 <td>Seattle</td>
-            </tr>
             <tr>
                 <th>Governor</th>
                 <td>Jay Inslee</td>
@@ -102,6 +107,38 @@
             <tr>
                 <th>Area</th>
                 <td>71,362 sq. mi.</td>
+            </tr>
+        </table>
+        <table id="notableCities">
+            <caption>Notable Cities</caption>
+            <tr>
+                <th>City</th>
+                <th>Population</th>
+                <th>Rank</th>
+            </tr>
+            <tr>
+                <td>Seattle</td>
+                <td>749,256</td>
+                <td>1</td>
+            <tr>
+                <td>Spokane</td>
+                <td>230,160</td>
+                <td>2</td>
+            </tr>
+            <tr>
+                <td>Tacoma</td>
+                <td>221,776</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>Vancouver</td>
+                <td>194,512</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td>Bellevue</td>
+                <td>139,820</td>
+                <td>5</td>
             </tr>
         </table>
     </aside>
