--- a/olympia.html
+++ b/olympia.html
@@ -36,29 +36,11 @@
     <div class="content">
         <section>
             <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto autem dicta, eligendi et eum
-                excepturi expedita facilis hic obcaecati quae quaerat quod recusandae repellendus repudiandae sint sunt
-                veritatis voluptate?</p>
-        </section>
-        <section>
-            <article>
-                <h2>Article 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
-            </article>
-            <article>
-                <h2>Article 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
-            </article>
+            <p>
+                Olympia is the capital seat of the Washington State government. Sitting in the Nisqually valley at the
+                foot of beautiful Mount Rainier, Olympia is a small city with a big feel. The city's largest attraction
+                is the capital building which hosts tours daily.
+            </p>
         </section>
     </div>
     <aside>
