--- a/seattle.html
+++ b/seattle.html
@@ -36,29 +36,11 @@
     <div class="content">
         <section>
             <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto autem dicta, eligendi et eum
-                excepturi expedita facilis hic obcaecati quae quaerat quod recusandae repellendus repudiandae sint sunt
-                veritatis voluptate?</p>
-        </section>
-        <section>
-            <article>
-                <h2>Article 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
-            </article>
-            <article>
-                <h2>Article 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
-            </article>
+            <p>
+                Seattle is an iconic city known for its culture, coffee, throwing fish at Pike Place Market, and of
+                course the Space Needle. Seattle is an outdoor city. Within driving distance of the ocean, mountains,
+                forest, lakes and seas as well as a moderate climate gives Seattle’s inhabitants plenty to do.
+            </p>
         </section>
     </div>
     <aside>
