--- a/spokane.html
+++ b/spokane.html
@@ -36,29 +36,12 @@
     <div class="content">
         <section>
             <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto autem dicta, eligendi et eum
-                excepturi expedita facilis hic obcaecati quae quaerat quod recusandae repellendus repudiandae sint sunt
-                veritatis voluptate?</p>
-        </section>
-        <section>
-            <article>
-                <h2>Article 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
-            </article>
-            <article>
-                <h2>Article 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
-                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
-                    repellat, sequi similique!</p>
-            </article>
+            <p>
+                Spokane is the State’s second-largest city which sits on the eastern border near Idaho. Spokane is a
+                major center for education which includes Gonzaga University, known for their elite college basketball
+                team. Running through the center of the city is the Spokane river. Along the river you can find many
+                parks and nature trails for some outdoor recreations.
+            </p>
         </section>
     </div>
     <aside>
